# fastdb-python

./: LICENSE  fastdb.py  pyproject.toml  setup.cfg  setup.py  setup.sh
src/: __init__.py
