[metadata]
name = fastdb
description = a fast database
author = Kellan B
author_email = kellanbutler52@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    fastdb

    
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]


[options.package_data]
superstacks = py.typed
